# api/src/routes/quizzes.js
@@ -6,54 +6,41 @@ const {
   updateQuizStatus,
   getApprovedQuizzes,
   getPendingQuizzes,
+  searchQuizzes,
 } = require("../core/quiz");
 
 module.exports = (router) => {
-  router.get("/quizzes/pending", async (req, res) => {
-    /*
-      #swagger.tags = ["Quiz"]
-      #swagger.description = 'Get all pending quizzes'
-    */
-    res.setHeader("Content-Type", "application/json");
-    const skip = Number(req.params.skip) || 0;
-    const take = Number(req.params.take) || 20;
-    /*
-      #swagger.parameters['skip'] = {
-        in: 'query',
-        description: 'How many elements to skip. Used for paging.',
-        required: false,
-        type: 'number'
-      } 
-      #swagger.parameters['take'] = {
-        in: 'query',
-        description: 'How many elements to take. Used for paging.',
-        required: false,
-        type: 'number'
-      } 
-    */
-    try {
-      const data = await getPendingQuizzes(skip, take);
-      /*
-        #swagger.responses[200] = {
-          description: "Quizzes fetched successfully",
-          schema: { $ref: "#/definitions/QuizArray" }
-        } 
-      */
-      res.send(data.rows);
-    } catch (error) {
-      res.status(500).send(error);
-    }
-  });
-
-  router.get("/quizzes/approved", async (req, res) => {
+  router.get("/quizzes", async (req, res) => {
     /*
       #swagger.tags = ["Quiz"]
       #swagger.description = 'Get all approved quizzes'
     */
     res.setHeader("Content-Type", "application/json");
-    const skip = Number(req.params.skip) || 0;
-    const take = Number(req.params.take) || 20;
+    const skip = Number(req.query.skip) || 0;
+    const take = Number(req.query.take) || 20;
+    const { query, statuses, topics } = req.query;
+    const sort = req.query.sort || 'name';
+    const order = req.query.order || 'asc';
+
     /*
+      #swagger.parameters['query'] = {
+        in: 'query',
+        description: 'Search by name.',
+        required: false,
+        type: 'string'
+      }
+      #swagger.parameters['statuses'] = {
+        in: 'query',
+        description: 'Search by list of statuses. Example: 1,2,3',
+        required: false,
+        type: 'string'
+      }
+      #swagger.parameters['topics'] = {
+        in: 'query',
+        description: 'Search by list of topics. Example: 1,2,3',
+        required: false,
+        type: 'string'
+      }
       #swagger.parameters['skip'] = {
         in: 'query',
         description: 'How many elements to skip. Used for paging.',
@@ -66,17 +53,31 @@ module.exports = (router) => {
         required: false,
         type: 'number'
       } 
+      #swagger.parameters['sort'] = {
+        in: 'query',
+        description: 'Sort by field',
+        required: false,
+        type: 'string'
+      } 
+      #swagger.parameters['order'] = {
+        in: 'query',
+        description: 'Sort order.',
+        required: false,
+        type: 'string'
+      } 
     */
     try {
-      const data = await getApprovedQuizzes(skip, take);
+      console.log(query, topics, statuses, sort, order, skip, take)
+      const data = await searchQuizzes(query, topics, statuses, sort, order, skip, take);
       /*
         #swagger.responses[200] = {
           description: "Quizzes fetched successfully",
-          schema: { $ref: "#/definitions/QuizArray" }
+          schema: { $ref: "#/definitions/QuizSearchResult" }
         } 
       */
-      res.send(data.rows);
+      res.send(data);
     } catch (error) {
+      console.error(error)
       res.status(500).send(error);
     }
   });
